alb/alb.tf
resource "aws_lb" "first-test" {
  name               = "test-lb-tf"
  internal           = false
  load_balancer_type = "application"
  subnets            = data.aws_subnets.default.ids

  enable_deletion_protection = false

  access_logs {
    bucket  = aws_s3_bucket.lb_logs.id
    prefix  = "test-lb"
    enabled = true
  }

  tags = {
    Environment = "dev"
  }
}

resource "aws_lb_listener" "http" {
    load_balancer_arn   = aws_lb.example.arn
    port                = 80
    protocol            = "HTTP"

    default_action{
        type = "fixed-response"

        fixed_response {
          content_type = "text/plain"
          message_body = "404: page not found"
          status_code = 404
        }
    }
}

resource "aws_security_group" "alb" {
    #Allow inbound HTTP requests

    ingress{
        from_port = 80
        to_port   = 80
        protocol  = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    
    }

    #Allow outbound HTTP requests

    egress {
        from_port = 0
        to_port   = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}

resource "aws_lb" "example" {

    name = "terraform-asg-example"
    load_balancer_type = "application"
    subnets  = data.aws_subnets.default.ids
    security_groups  = [aws_security_group.alb.id]

}

resource "aws_lb_target_group" "asg" {
  name  = "terraform-asg-example"
  port  = var.server_port
  protocol = "HTTP"
  vpc_id = data.aws_vpc.default.id

  health_check {
    path = "/"
    protocol = "HTTP"
    matcher = "200"
    interval = 15
    timeout = 3
    healthy_threshold = 2
    unhealthy_threshold = 2
}

}

resource "aws_lb_listener_rule" "asg"{
  listener_arn = aws_lb_listener.http.arn
  priority = 100

  condition {
    path_pattern {
      values = ["*"]
    }
  }

  action {
    type  = "forward"
    target_group_arn = aws_lb_target_group.asg.arn
  
  }
}

output "alb_dns_name" {
  value   = aws_lb.example.dns_name
  description = "The domain name of the load balancer"
  
}
